// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have correct subtotal and total 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="productArea"
    >
      <div
        class="product"
      >
        <div>
          橘子
        </div>
        <div>
          $
          20
        </div>
        <form
          data-testid="form"
          name="橘子"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="橘子"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
      <div
        class="product"
      >
        <div>
          蓮霧
        </div>
        <div>
          $
          30
        </div>
        <form
          data-testid="form"
          name="蓮霧"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="蓮霧"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
      <div
        class="product"
      >
        <div>
          哈蜜瓜
        </div>
        <div>
          $
          40
        </div>
        <form
          data-testid="form"
          name="哈蜜瓜"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="哈蜜瓜"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
      <div
        class="product"
      >
        <div>
          蘋果
        </div>
        <div>
          $
          50
        </div>
        <form
          data-testid="form"
          name="蘋果"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="蘋果"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
      <div
        class="product"
      >
        <div>
          葡萄柚
        </div>
        <div>
          $
          15
        </div>
        <form
          data-testid="form"
          name="葡萄柚"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="葡萄柚"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
    </div>
    <div
      class="cartArea"
    >
      <div
        class="productInCart"
        data-testid="subtotal橘子"
      >
        <span
          class="subtotal"
        >
          橘子
           x 
          3
           = $
          60
        </span>
        <button
          class="buttonInCart  btn btn-danger btn-sm"
          data-testid="橘子clear"
        >
          clear
        </button>
        <button
          class="buttonInCart  btn btn-warning btn-sm"
          data-testid="橘子-1"
        >
          -1
        </button>
      </div>
      <div
        class="productInCart"
        data-testid="subtotal蓮霧"
      >
        <span
          class="subtotal"
        >
          蓮霧
           x 
          1
           = $
          30
        </span>
        <button
          class="buttonInCart  btn btn-danger btn-sm"
          data-testid="蓮霧clear"
        >
          clear
        </button>
        <button
          class="buttonInCart  btn btn-warning btn-sm"
          data-testid="蓮霧-1"
        >
          -1
        </button>
      </div>
      <div
        class="productInCart"
        data-testid="subtotal哈蜜瓜"
      >
        <span
          class="subtotal"
        >
          哈蜜瓜
           x 
          1
           = $
          40
        </span>
        <button
          class="buttonInCart  btn btn-danger btn-sm"
          data-testid="哈蜜瓜clear"
        >
          clear
        </button>
        <button
          class="buttonInCart  btn btn-warning btn-sm"
          data-testid="哈蜜瓜-1"
        >
          -1
        </button>
      </div>
      <div
        class="productInCart"
        data-testid="subtotal蘋果"
      >
        <span
          class="subtotal"
        >
          蘋果
           x 
          2
           = $
          100
        </span>
        <button
          class="buttonInCart  btn btn-danger btn-sm"
          data-testid="蘋果clear"
        >
          clear
        </button>
        <button
          class="buttonInCart  btn btn-warning btn-sm"
          data-testid="蘋果-1"
        >
          -1
        </button>
      </div>
      <div
        class="productInCart"
        data-testid="subtotal葡萄柚"
      >
        <span
          class="subtotal"
        >
          葡萄柚
           x 
          5
           = $
          75
        </span>
        <button
          class="buttonInCart  btn btn-danger btn-sm"
          data-testid="葡萄柚clear"
        >
          clear
        </button>
        <button
          class="buttonInCart  btn btn-warning btn-sm"
          data-testid="葡萄柚-1"
        >
          -1
        </button>
      </div>
      <div>
        <div>
          ===============
        </div>
        <div
          data-testid="total"
        >
          總計 $
          305
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should minus and clear correctly 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="productArea"
    >
      <div
        class="product"
      >
        <div>
          橘子
        </div>
        <div>
          $
          20
        </div>
        <form
          data-testid="form"
          name="橘子"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="橘子"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
      <div
        class="product"
      >
        <div>
          蓮霧
        </div>
        <div>
          $
          30
        </div>
        <form
          data-testid="form"
          name="蓮霧"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="蓮霧"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
      <div
        class="product"
      >
        <div>
          哈蜜瓜
        </div>
        <div>
          $
          40
        </div>
        <form
          data-testid="form"
          name="哈蜜瓜"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="哈蜜瓜"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
      <div
        class="product"
      >
        <div>
          蘋果
        </div>
        <div>
          $
          50
        </div>
        <form
          data-testid="form"
          name="蘋果"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="蘋果"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
      <div
        class="product"
      >
        <div>
          葡萄柚
        </div>
        <div>
          $
          15
        </div>
        <form
          data-testid="form"
          name="葡萄柚"
        >
          <input
            class="input"
            data-testid="Product"
            max="99"
            min="0"
            name="葡萄柚"
            placeholder="數量"
            type="number"
          />
          <button
            class="btn btn-outline-primary btn-sm"
          >
            加入購物車
          </button>
        </form>
      </div>
    </div>
    <div
      class="cartArea"
    >
      <div
        class="productInCart"
        data-testid="subtotal橘子"
      >
        <span
          class="subtotal"
        >
          橘子
           x 
          2
           = $
          40
        </span>
        <button
          class="buttonInCart  btn btn-danger btn-sm"
          data-testid="橘子clear"
        >
          clear
        </button>
        <button
          class="buttonInCart  btn btn-warning btn-sm"
          data-testid="橘子-1"
        >
          -1
        </button>
      </div>
      <div>
        <div>
          ===============
        </div>
        <div
          data-testid="total"
        >
          總計 $
          40
        </div>
      </div>
    </div>
  </div>
</div>
`;
